<resources>
    <string name="app_name">SuggestionsKitTool</string>
    <string name="feature_name">FeatureName</string>
    <string name="feedback">数据反馈能力</string>
    <string name="feedbackAction">反馈服务使用记录</string>
    <string name="feedbackEvent">反馈事件</string>
    <string name="has_feature">HASFEATURE接口测试</string>
    <string name="feedbackPlan">反馈计划</string>
    <string name="feedback_plan_times">反馈计划次数</string>
    <string name="feedbackPlan_many">多次反馈计划</string>
    <string name="suggestion_kit_feedback_action_intentType">意图类型</string>
    <string name="awareness_kit_feedback_action_actionType">操作类型</string>
    <string name="awareness_kit_feedback_action_timeStamp">发生时间</string>
    <string name="suggestion_feedback_event_pkgName">应用包名</string>
    <string name="suggestion_feedback_event_num">事件编号</string>
    <string name="suggestion_feedback_event_eventStatus">事件状态</string>
    <string name="suggestion_feedback_event_beginTime">事件生效时间</string>
    <string name="suggestion_feedback_event_endTime">事件失效时间</string>
    <string name="suggestion_feedback_success">反馈数据成功</string>
    <string name="suggestion_feedback_failed">反馈数据失败</string>
    <string name="suggestion_feedback_param_error">参数校验不通过</string>
    <string name="suggestion_feedback_flow_error">接口流控，短时间内调用次数太频繁</string>
    <string name="suggestion_feedback_verification_error">权限校验失败</string>
    <string name="suggestion_feedback_service_error">服务内部异常</string>
    <string name="suggestion_feedback_unauthorized_error">未授权</string>
    <string name="suggestion_feedback_motion_initialization_error">初始化活动监测服务失败</string>
    <string name="delete_feedback_success">删除数据成功</string>
    <string name="delete_feedback_failed">删除数据失败</string>
    <string name="suggestion_please_input_one">请填写%s</string>
    <string name="suggestion_input_confirm">确定</string>
    <string name="suggestion_input_cancel">取消</string>
    <string name="suggestion_continuous_count">连续反馈次数</string>
    <string name="feedback_concurrent_button">多线程测试</string>
    <string name="suggestion_confidence">置信度</string>
    <string name="suggestion_create_time">创建时间</string>
    <string name="suggestion_plan_name">计划名称</string>
    <string name="suggestion_recurrent_frequency">重复频率</string>
    <string name="suggestion_recurrent_begin">计划生效时间</string>
    <string name="suggestion_recurrent_end">计划失效时间</string>
    <string name="days_of_the_week">每周的周几</string>
    <string name="days_of_the_month">每月的几号</string>
    <string name="days_of_the_year">每年的几月几号</string>
    <string name="specified_day">指定决定日期</string>
    <string name="suggestion_begin_time">计划开始时间</string>
    <string name="suggestion_end_time">计划结束时间</string>
    <string name="suggestion_recurrent_type">重复类型</string>
    <string name="suggestion_recurrent_gap">重复间隔</string>
    <string name="feedback_continuous_gap">连续反馈间隔毫秒数</string>
    <string name="feedback_continuous_button">连续反馈</string>
    <string name="feedback_interface_success">获取反馈接口实例成功</string>
    <string name="feedback_interface_failed">获取反馈接口实例失败</string>
    <string name="kit_feedback_feedbackExtra1">附加消息1</string>
    <string name="kit_feedback_feedbackExtra2">附加消息2</string>
    <string name="kit_feedback_feedbackExtra3">附加消息3</string>
    <string name="kit_feedback_event_appName">应用名</string>
    <string name="kit_feedback_event_url">deeplink地址</string>
    <string name="kit_feedback_event_minVersion">支持的APP最小版本号</string>
    <string name="kit_feedback_event_minAndroidApiLevel">所需android最小API版本</string>
    <string name="kit_feedback_event_viewInfo">显示信息</string>
    <string name="kit_feedback_event_widgetType">模板样式</string>
    <string name="kit_feedback_event_widgetSize">显示样式</string>
    <string name="kit_feedback_event_iconBase">服务显示图标</string>
    <string name="kit_feedback_event_iconBase64">iconBase64数据</string>
    <string name="kit_feedback_event_icon_url">icon url</string>
    <string name="time_max">最大反馈计划次数为50次</string>

    <string name="kit_feedback_event_pos">角标位置</string>
    <string name="kit_feedback_event_cornerBase64">角标Base64数据</string>
    <string name="kit_feedback_event_cornerUrl">云侧角标URL链接</string>
    <string name="kit_feedback_event_mainTitle">主标题</string>
    <string name="kit_feedback_event_subTitle">副标题</string>
    <string name="kit_sport_status">运动感知能力</string>
    <string name="delete_feedback">删除数据</string>
    <string name="kit_sport_status_service_bind">绑定运动状态service</string>
    <string name="kit_sport_status_service_unbind">解绑运动状态service</string>
    <string name="kit_sport_status_permission_check">运动状态权限检查</string>
    <string name="kit_sport_status_permission_request">请求运动健身权限</string>
    <string name="kit_sport_status_permission_granted">已允许</string>
    <string name="kit_sport_status_permission_forbidden">已禁止</string>
    <string name="kit_sport_status_query">运动状态查询</string>
    <string name="kit_sport_status_query_toast">请先绑定运动状态service</string>
    <string name="system_permission_activity_recgonition">"用于获取您的步数，来提高识别地铁闸机位置的精度"</string>

    <string name="kit_feedback_order">反馈订单</string>
    <string name="clear_log">清除日志</string>
    <string name="log_result">结果日志：</string>

    <string name="get_sport_status_success">运动状态查询成功</string>
    <string name="get_sport_status_fail">运动状态查询失败</string>
    <string name="sport_init_success">运动状态初始化成功</string>
    <string name="sport_init_fail">运动状态初始化失败</string>
</resources>