<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/has_feature"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/has_feature" />

            <Button
                android:id="@+id/feedbackAction_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/feedbackAction" />

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/feedback_continuous_button" />

            <Button
                android:id="@+id/concurrent_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/feedback_concurrent_button" />

            <com.hihonor.suggestionkittool.view.SuggestItemView
                android:id="@+id/feature_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.hihonor.suggestionkittool.view.SuggestItemView
                android:id="@+id/intent_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.hihonor.suggestionkittool.view.SuggestItemView
                android:id="@+id/actionType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.hihonor.suggestionkittool.view.SuggestItemView
                android:id="@+id/timeStamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.hihonor.suggestionkittool.view.SuggestItemView
                android:id="@+id/continuous_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.hihonor.suggestionkittool.view.SuggestItemView
                android:id="@+id/continuous_gap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>